fix : header logo z-index 수정

--- a/team1_project1/src/main/webapp/resources/css/header.css
+++ b/team1_project1/src/main/webapp/resources/css/header.css
@@ -14,6 +14,7 @@ header {
     top: 50%;
     transform: translateY(-50%);
     left: 15px;
+    z-index: 10;
 }
 .header-logo {
     display: inline-block;
